trunk/tests/kiama/negative/name_errors/L4/4_arrayname1.ob
MODULE arrayname1;

TYPE
    atype1 = ARRAY 10 OF atype0;

END arrayname1.
